package com.zsx.design.pattern.structural.adapter;

public class Adaptee {

    public String specialRequirements() {
        return "SPECIAL";
    }

}
