package com.zsx.design.pattern.structural.adapter;


public interface ITarget {
    String demand();

}
