@startuml

Title "适配器模式UML图"

interface ITarget

Adaptee <-- Adapter
ITarget <|.. Adapter

interface ITarget {
    +String demand();

}

class Adaptee {

    +public String specialRequirements() {}

}

class Adapter {

    -private Adaptee adaptee;

    +public Adapter(Adaptee adaptee) {}

    +public String demand() {}

}

@enduml